----------------------------------------------------------------------
 OmegaT 2.1.1 update 1
----------------------------------------------------------------------
  1 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.1 update 1 vs. 2.1.1

  Other enhancements:
  
  - The About dialog displays memory usage

  Bug fixes:

  - When the project was reloaded after pressing OK in Project Properties,
the current segment was moved to the next one. If "Copy source text" was
set in Editing Behaviour, the previous segment was entered as translation.


----------------------------------------------------------------------
 OmegaT 2.1.1
----------------------------------------------------------------------
  8 Enhancements
  6 Bugfixes
----------------------------------------------------------------------
2.1.1 vs. 2.1.0

  Other enhancements:

  - Typo3 LocManager File Filter

  - Help & Manual File Filter

  - Use tokenizers as plugins
  (Requires version x.x-2.1 of the tokenizers)

  - Text selected in the Glossary pane can be inserted with a right click

  - New options to enable checking localisation variables
  (see http://sourceforge.net/support/tracker.php?aid=2890624)

   - [stopwords] (simplify segments for matching purposes)
  http://sourceforge.net/support/tracker.php?aid=1599201
 (Requires version 0.4-2.1 of the tokenizers for English)

   - Dated TUs in TM
  http://sourceforge.net/support/tracker.php?aid=1546824

  - Automatic bundle aligner in console mode
  http://sourceforge.net/support/tracker.php?aid=2911321

  Bug Fixes:

  - Number of unique segments always 0 in standard statistics
  http://sourceforge.net/support/tracker.php?aid=2879866

  - Non-tag is marked as tag error 
  http://sourceforge.net/support/tracker.php?aid=2890624

  - When there were fuzzy matches for a given segment, it wasn't counted
as a repetition in Match Statistics

  - Wrong spell checker display if word split to several lines
